--- a/ca/LC_MESSAGES/ckan.po
+++ b/ca/LC_MESSAGES/ckan.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: CKAN (Comprehensive Knowledge Archive Network)\n"
 "Report-Msgid-Bugs-To: http://www.ckan.org/\n"
 "POT-Creation-Date: 2011-11-16 18:02+0000\n"
-"PO-Revision-Date: 2011-11-16 18:03+0000\n"
-"Last-Translator: dread <internet@davidread.org>\n"
+"PO-Revision-Date: 2011-11-21 15:33+0000\n"
+"Last-Translator: ilabastida <ilabastida@ub.edu>\n"
 "Language-Team: Catalan (http://www.transifex.net/projects/p/ckan/team/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -155,7 +155,7 @@ msgstr ""
 #: ckan/controllers/api.py:578
 #, python-format
 msgid "Bad slug type: %s"
-msgstr ""
+msgstr "Tipus Slug erroni: %s"
 
 #: ckan/controllers/authorization_group.py:44
 #, python-format
@@ -192,7 +192,7 @@ msgstr "No autoritzat a llegir el grup %s"
 
 #: ckan/controllers/group.py:86
 msgid "Cannot render description"
-msgstr ""
+msgstr "No es pot fer la descripció"
 
 #: ckan/controllers/group.py:161 ckan/controllers/group_formalchemy.py:93
 #: ckan/controllers/package.py:374 ckan/controllers/package_formalchemy.py:93
@@ -348,7 +348,7 @@ msgstr "Usuari %s no autoritzat a editar %s"
 
 #: ckan/controllers/user.py:225
 msgid "Profile updated"
-msgstr ""
+msgstr "Perfil actualitzat"
 
 #: ckan/controllers/user.py:259
 #, python-format
@@ -813,15 +813,17 @@ msgid ""
 "Url must be purely lowercase alphanumeric (ascii) characters and these "
 "symbols: -_"
 msgstr ""
+"La URL ha de ser purament formada per caràcters alfanumèrics en minúscula "
+"(ASCII) i aquests símbols:-_"
 
 #: ckan/logic/validators.py:114
 msgid "That URL is already in use."
-msgstr ""
+msgstr "Aquesta URL ja està en ús."
 
 #: ckan/logic/validators.py:154
 #, python-format
 msgid "Tag \"%s\" length is more than maximum %i"
-msgstr ""
+msgstr "La longitud de l'etiqueta \"%s\" és més gran que el permès %i"
 
 #: ckan/logic/validators.py:221
 msgid "That login name is not available."
@@ -925,7 +927,7 @@ msgstr "API REST: Actualitzada la relació entre paquets: %s %s %s"
 
 #: ckan/logic/action/update.py:378
 msgid "TaskStatus was not found."
-msgstr ""
+msgstr "No s'ha trobat l'estat de tasques"
 
 #: ckan/logic/auth/create.py:13
 #, python-format
@@ -987,7 +989,7 @@ msgstr "L'usuari %s no està autoritzat a esborrar el grup %s"
 #: ckan/logic/auth/delete.py:55
 #, python-format
 msgid "User %s not authorized to delete task_status"
-msgstr ""
+msgstr "L'usuari %s no està autoritzat a esborrar l'estat de les tasques"
 
 #: ckan/logic/auth/get.py:78
 #, python-format
@@ -1008,7 +1010,7 @@ msgstr ""
 #: ckan/logic/auth/get.py:111
 #, python-format
 msgid "User %s not authorized to read resource %s"
-msgstr ""
+msgstr "L'usuari %s no està autoritzat a llegir el recurs %s"
 
 #: ckan/logic/auth/get.py:126
 #, python-format
@@ -1023,7 +1025,7 @@ msgstr "L'usuari %s no està autoritzat a editar el conjunt de dades %s"
 #: ckan/logic/auth/update.py:44
 #, python-format
 msgid "User %s not authorized to read edit %s"
-msgstr ""
+msgstr "L'usuari %s no està autoritzat a editar %s"
 
 #: ckan/logic/auth/update.py:58
 #, python-format
@@ -1073,6 +1075,7 @@ msgstr "L'usuari %s no està autoritzat a canviar l'estat de la revisió"
 #, python-format
 msgid "User %s not authorized to update task_status table"
 msgstr ""
+"L'usuari %s no està autoritzat a actualitzar la taula de l'estat de tasques"
 
 #: ckan/logic/auth/update.py:165
 msgid "Valid API key needed to edit a package"
@@ -1235,15 +1238,15 @@ msgstr "Hola món!"
 
 #: ckan/templates/js_strings.html:18
 msgid "Checking..."
-msgstr ""
+msgstr "Comprovant...."
 
 #: ckan/templates/js_strings.html:19
 msgid "This URL is available!"
-msgstr ""
+msgstr "Aquesta URL està disponible!"
 
 #: ckan/templates/js_strings.html:20
 msgid "This URL is already used, please use a different one."
-msgstr ""
+msgstr "Aquesta URL ja està utilitzada, feu-ne servir una altra de diferent."
 
 #: ckan/templates/js_strings.html:22
 msgid "Failed to save, possibly due to invalid data "
@@ -1255,7 +1258,7 @@ msgstr "Afegir conjunt de dades"
 
 #: ckan/templates/js_strings.html:24
 msgid "Add Group"
-msgstr ""
+msgstr "Afegeix grup"
 
 #: ckan/templates/js_strings.html:25
 msgid ""
@@ -1271,11 +1274,11 @@ msgstr "Carregant..."
 
 #: ckan/templates/js_strings.html:27
 msgid "(no name)"
-msgstr ""
+msgstr "(Sense nom)"
 
 #: ckan/templates/js_strings.html:28
 msgid "Delete the resource '%name%'?"
-msgstr ""
+msgstr "Voleu esborrar el recurs '%name%'?"
 
 #: ckan/templates/js_strings.html:33
 msgid "File URL"
@@ -1342,7 +1345,7 @@ msgstr "ID"
 
 #: ckan/templates/js_strings.html:49
 msgid "Done"
-msgstr ""
+msgstr "Fet"
 
 #: ckan/templates/js_strings.html:50
 msgid "This resource has unsaved changes."
@@ -1354,19 +1357,19 @@ msgstr "És el primer cop que visiteu"
 
 #: ckan/templates/layout_base.html:51
 msgid "? Visit our"
-msgstr ""
+msgstr "? Visiteu el nostre"
 
 #: ckan/templates/layout_base.html:51
 msgid "About page"
-msgstr ""
+msgstr "Pàgina Quant a"
 
 #: ckan/templates/layout_base.html:51
 msgid "to find out more."
-msgstr ""
+msgstr "per saber-ne més."
 
 #: ckan/templates/layout_base.html:52
 msgid "x"
-msgstr ""
+msgstr "x"
 
 #: ckan/templates/layout_base.html:59
 msgid "My account"
@@ -1708,7 +1711,7 @@ msgstr "Grups de conjunts de dades"
 
 #: ckan/templates/group/index.html:11
 msgid "What Are Groups?"
-msgstr ""
+msgstr "Què són els grups?"
 
 #: ckan/templates/group/index.html:12
 msgid ""
@@ -1728,15 +1731,15 @@ msgstr "Historial"
 
 #: ckan/templates/group/layout.html:26
 msgid "List Groups"
-msgstr ""
+msgstr "Llistat de grups"
 
 #: ckan/templates/group/layout.html:29
 msgid "Add a Group"
-msgstr ""
+msgstr "Afegir un grup"
 
 #: ckan/templates/group/new.html:5 ckan/templates/group/new.html:6
 msgid "Add A Group"
-msgstr ""
+msgstr "Afegir un grup"
 
 #: ckan/templates/group/new_group_form.html:8
 #: ckan/templates/package/form.html:7
@@ -1757,7 +1760,7 @@ msgstr "El formulari conté camps incorrectes:"
 #: ckan/templates/group/new_group_form.html:22
 #: ckan/templates/package/new_package_form.html:44
 msgid "(edit)"
-msgstr ""
+msgstr "(editar)"
 
 #: ckan/templates/group/new_group_form.html:26
 msgid "2+ chars, lowercase, using only 'a-z0-9' and '-_'"
@@ -2006,11 +2009,11 @@ msgstr "Informació bàsica"
 
 #: ckan/templates/package/edit.html:22
 msgid "Futher Information"
-msgstr ""
+msgstr "Més informació"
 
 #: ckan/templates/package/edit.html:24
 msgid "Groups & Tags"
-msgstr ""
+msgstr "Grups i Etiquetes"
 
 #: ckan/templates/package/edit_form.html:13
 #: ckan/templates/package/new_package_form.html:203
@@ -2405,7 +2408,7 @@ msgstr "Correu electrònic:"
 
 #: ckan/templates/user/edit_user_form.html:22
 msgid "OpenID:"
-msgstr ""
+msgstr "OpenID:"
 
 #: ckan/templates/user/edit_user_form.html:25
 msgid "About:"
@@ -2433,11 +2436,11 @@ msgstr "Contrasenya (repetiu-la):"
 
 #: ckan/templates/user/edit_user_form.html:49
 msgid "Change your username"
-msgstr ""
+msgstr "Canvieu el nom d'usuari"
 
 #: ckan/templates/user/edit_user_form.html:51
 msgid "Username:"
-msgstr ""
+msgstr "Nom d'usuari:"
 
 #: ckan/templates/user/layout.html:11
 msgid "My Profile"
@@ -2453,11 +2456,11 @@ msgstr "Tancar sessió"
 
 #: ckan/templates/user/layout.html:19
 msgid "View Profile"
-msgstr ""
+msgstr "Vegeu el perfil"
 
 #: ckan/templates/user/layout.html:25
 msgid "Register Account"
-msgstr ""
+msgstr "Registrar un compte"
 
 #: ckan/templates/user/list.html:8
 msgid "user-list"
@@ -2532,7 +2535,7 @@ msgstr "Tancar sessió - Usuari"
 
 #: ckan/templates/user/logout.html:8
 msgid "Logout from"
-msgstr ""
+msgstr "Sortir de"
 
 #: ckan/templates/user/logout.html:11
 msgid "You have logged out successfully."
@@ -2544,7 +2547,7 @@ msgstr "Registre - Usuari"
 
 #: ckan/templates/user/new.html:6
 msgid "Register for a new Account"
-msgstr ""
+msgstr "Registreu-vos per a un compte nou"
 
 #: ckan/templates/user/new_user_form.html:18
 msgid "3+ chars, using only 'a-z0-9' and '-_'"
@@ -2556,7 +2559,7 @@ msgstr "Nom complet (opcional):"
 
 #: ckan/templates/user/new_user_form.html:25
 msgid "E-Mail"
-msgstr ""
+msgstr "Adreça electrònica"
 
 #: ckan/templates/user/read.html:5
 msgid "- User"
