--- a/cs_CZ/LC_MESSAGES/ckan.po
+++ b/cs_CZ/LC_MESSAGES/ckan.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: CKAN (Comprehensive Knowledge Archive Network)\n"
 "Report-Msgid-Bugs-To: http://www.ckan.org/\n"
 "POT-Creation-Date: 2011-11-16 18:02+0000\n"
-"PO-Revision-Date: 2011-11-16 18:03+0000\n"
-"Last-Translator: dread <internet@davidread.org>\n"
+"PO-Revision-Date: 2011-12-14 10:23+0000\n"
+"Last-Translator: uep <m.tajtl@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.net/projects/p/ckan/team/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1382,7 +1382,7 @@ msgstr "Vyhledat"
 #: ckan/templates/layout_base.html:84 ckan/templates/layout_base.html:127
 #: ckan/templates/layout_base.html:130 ckan/templates/home/about.html:6
 msgid "About"
-msgstr "O nás"
+msgstr "O CKAN"
 
 #: ckan/templates/layout_base.html:107
 msgid "Master content template placeholder … please replace me."
