--- a/es/LC_MESSAGES/ckan.po
+++ b/es/LC_MESSAGES/ckan.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: CKAN (Comprehensive Knowledge Archive Network)\n"
 "Report-Msgid-Bugs-To: http://www.ckan.org/\n"
 "POT-Creation-Date: 2011-11-16 18:02+0000\n"
-"PO-Revision-Date: 2011-11-16 18:03+0000\n"
-"Last-Translator: dread <internet@davidread.org>\n"
+"PO-Revision-Date: 2011-11-21 15:45+0000\n"
+"Last-Translator: ilabastida <ilabastida@ub.edu>\n"
 "Language-Team: Spanish (Castilian) (http://www.transifex.net/projects/p/ckan/team/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,7 +35,7 @@ msgstr ""
 
 #: ckan/controllers/admin.py:290
 msgid "Purge complete"
-msgstr ""
+msgstr "Purga completada"
 
 #: ckan/controllers/api.py:37 ckan/controllers/authorization_group.py:22
 #: ckan/controllers/group.py:58 ckan/controllers/home.py:27
@@ -344,7 +344,7 @@ msgstr "El usuario %s no está autorizado para editar %s"
 
 #: ckan/controllers/user.py:225
 msgid "Profile updated"
-msgstr ""
+msgstr "Perfil actualizado"
 
 #: ckan/controllers/user.py:259
 #, python-format
@@ -570,7 +570,7 @@ msgstr ""
 
 #: ckan/forms/package.py:70 ckan/templates/package/new_package_form.html:143
 msgid "e.g. pollution rivers water-quality"
-msgstr ""
+msgstr "por ejemplo, la calidad del agua de los ríos contaminados"
 
 #: ckan/forms/package.py:74
 msgid "The files containing the data or address of the APIs for accessing it."
@@ -783,7 +783,7 @@ msgstr ""
 #: ckan/logic/validators.py:154
 #, python-format
 msgid "Tag \"%s\" length is more than maximum %i"
-msgstr ""
+msgstr "La etiqueta \"%s\" es más larga que el máximo permitido %i"
 
 #: ckan/logic/validators.py:221
 msgid "That login name is not available."
@@ -885,7 +885,7 @@ msgstr "REST API: Actualizar la relación de paquetes: %s %s %s"
 
 #: ckan/logic/action/update.py:378
 msgid "TaskStatus was not found."
-msgstr ""
+msgstr "No se ha encontrado TaskStatus."
 
 #: ckan/logic/auth/create.py:13
 #, python-format
@@ -962,6 +962,8 @@ msgstr "El usuario %s no está autorizado para leer el paquete %s"
 #: ckan/logic/auth/get.py:105 ckan/logic/auth/update.py:38
 msgid "No package found for this resource, cannot check auth."
 msgstr ""
+"No se ha encontrado ningún paquete para este recurso, no se puede comprobar "
+"la autoridad."
 
 #: ckan/logic/auth/get.py:111
 #, python-format
@@ -1195,7 +1197,7 @@ msgstr "¡Hola, mundo!"
 
 #: ckan/templates/js_strings.html:18
 msgid "Checking..."
-msgstr ""
+msgstr "Comprobando..."
 
 #: ckan/templates/js_strings.html:19
 msgid "This URL is available!"
@@ -1288,7 +1290,7 @@ msgstr "Última modificación"
 
 #: ckan/templates/js_strings.html:46
 msgid "Mimetype (Inner)"
-msgstr ""
+msgstr "Mimetype (Interno)"
 
 #: ckan/templates/js_strings.html:47
 msgid "Hash"
@@ -1312,19 +1314,19 @@ msgstr "La primera vez en"
 
 #: ckan/templates/layout_base.html:51
 msgid "? Visit our"
-msgstr ""
+msgstr "? Visite nuestro"
 
 #: ckan/templates/layout_base.html:51
 msgid "About page"
-msgstr ""
+msgstr "Página Acerca de"
 
 #: ckan/templates/layout_base.html:51
 msgid "to find out more."
-msgstr ""
+msgstr "para saber más."
 
 #: ckan/templates/layout_base.html:52
 msgid "x"
-msgstr ""
+msgstr "x"
 
 #: ckan/templates/layout_base.html:59
 msgid "My account"
@@ -1449,7 +1451,7 @@ msgstr "v"
 
 #: ckan/templates/admin/authz.html:6 ckan/templates/admin/authz.html:7
 msgid "Administration - Authorization"
-msgstr ""
+msgstr "Administración - Autorización"
 
 #: ckan/templates/admin/authz.html:10
 #: ckan/templates/authorization_group/authz.html:9
@@ -1476,7 +1478,7 @@ msgstr "Añade roles para cualquier usuario"
 #: ckan/templates/group/authz.html:22 ckan/templates/group/authz.html:40
 #: ckan/templates/package/authz.html:22 ckan/templates/package/authz.html:40
 msgid "Add Role"
-msgstr ""
+msgstr "Añadir Rol"
 
 #: ckan/templates/admin/authz.html:29
 #: ckan/templates/authorization_group/authz.html:27
@@ -1491,7 +1493,7 @@ msgstr "Añade roles para cualquier autorización de grupo"
 
 #: ckan/templates/admin/index.html:6 ckan/templates/admin/index.html:7
 msgid "Administration Dashboard"
-msgstr ""
+msgstr "Escritorio de Administración"
 
 #: ckan/templates/admin/index.html:10
 msgid "Current Sysadmins"
@@ -1503,7 +1505,7 @@ msgstr ""
 
 #: ckan/templates/admin/index.html:13
 msgid "authorization page"
-msgstr ""
+msgstr "página de autorización"
 
 #: ckan/templates/admin/layout.html:10 ckan/templates/revision/list.html:11
 msgid "Home"
@@ -1517,23 +1519,23 @@ msgstr "Autorización"
 
 #: ckan/templates/admin/layout.html:20
 msgid "Trash"
-msgstr ""
+msgstr "Papelera"
 
 #: ckan/templates/admin/trash.html:6 ckan/templates/admin/trash.html:7
 msgid "Administration - Trash"
-msgstr ""
+msgstr "Administración - Papelera"
 
 #: ckan/templates/admin/trash.html:10
 msgid "Deleted Revisions"
-msgstr ""
+msgstr "Revisiones eliminadas"
 
 #: ckan/templates/admin/trash.html:21 ckan/templates/admin/trash.html:39
 msgid "Purge them all (forever and irreversibly)"
-msgstr ""
+msgstr "Púrguelas todos (para siempre y de forma irreversible)"
 
 #: ckan/templates/admin/trash.html:27
 msgid "Deleted Datasets"
-msgstr ""
+msgstr "Conjuntos de datos eliminados"
 
 #: ckan/templates/authorization_group/authz.html:5
 msgid "- Authorization - AuthorizationGroups"
@@ -1888,6 +1890,8 @@ msgid ""
 "Add your own datasets to share them with others and\n"
 "        to find other people interested in your data."
 msgstr ""
+"Añada su propio conjunto de datos para compartirlos con otros y\n"
+"        encuentre a gente interesada en sus datos."
 
 #: ckan/templates/home/index.html:32
 msgid "Create a dataset »"
@@ -1946,11 +1950,11 @@ msgstr "Información Básica"
 
 #: ckan/templates/package/edit.html:22
 msgid "Futher Information"
-msgstr ""
+msgstr "Más información"
 
 #: ckan/templates/package/edit.html:24
 msgid "Groups & Tags"
-msgstr ""
+msgstr "Grupos y Etiquetas"
 
 #: ckan/templates/package/edit_form.html:13
 #: ckan/templates/package/new_package_form.html:203
@@ -2065,13 +2069,15 @@ msgstr "Los grupos son conjuntos de datos mantenidos por los usuarios de"
 
 #: ckan/templates/package/read.html:57
 msgid ". This dataset has not been added to any groups yet."
-msgstr ""
+msgstr ". Este conjunto de datos todavía no ha sido añadido a ningún grupo."
 
 #: ckan/templates/package/read.html:65
 msgid ""
 "Source\n"
 "          page"
 msgstr ""
+"Página\n"
+"          fuente"
 
 #: ckan/templates/package/read.html:66
 msgid "on"
@@ -2106,11 +2112,11 @@ msgstr ""
 
 #: ckan/templates/package/read.html:114
 msgid "Start an enquiry on IsItOpenData »"
-msgstr ""
+msgstr "Iniciar una petición sobre IsItOpenData »"
 
 #: ckan/templates/package/read.html:123
 msgid "This is an old revision of this dataset, as edited"
-msgstr ""
+msgstr "Esta es una revisión antigua de este conjunto de datos, editada por "
 
 #: ckan/templates/package/read.html:123 ckan/templates/package/read.html:124
 msgid "at"
@@ -2118,7 +2124,7 @@ msgstr "en"
 
 #: ckan/templates/package/read.html:123
 msgid ". It may differ significantly from the"
-msgstr ""
+msgstr ". Puede diferir significativamente de"
 
 #: ckan/templates/package/read.html:123
 msgid "current revision"
@@ -2126,7 +2132,7 @@ msgstr "revisión actual"
 
 #: ckan/templates/package/read.html:124
 msgid "This is the current revision of this dataset, as edited"
-msgstr ""
+msgstr "Esta es la versión actual de este conjunto de datos, editada por"
 
 #: ckan/templates/package/read.html:135
 msgid "RDF/XML"
@@ -2138,7 +2144,7 @@ msgstr "RDF / Turtle"
 
 #: ckan/templates/package/read_core.html:20
 msgid "Actions"
-msgstr ""
+msgstr "Acciones"
 
 #: ckan/templates/package/read_core.html:59
 msgid "Additional Information"
@@ -2163,7 +2169,7 @@ msgstr "Buscar -"
 
 #: ckan/templates/package/search.html:16
 msgid "Do you know of a dataset that should be added to"
-msgstr ""
+msgstr "Conoce algún conjunto de datos que debería añadirse a"
 
 #: ckan/templates/package/search.html:20
 msgid "Register it now"
@@ -2315,7 +2321,7 @@ msgstr "Etiqueta:"
 #: ckan/templates/tag/read.html:10
 #, python-format
 msgid "There are %(count)s datasets tagged with [1:%(tagname)s]:"
-msgstr ""
+msgstr "Hay %(count)s conjuntos de datos etiquetados con [1:%(tagname)s]:"
 
 #: ckan/templates/user/edit.html:6
 msgid "- Edit - User"
@@ -2335,7 +2341,7 @@ msgstr "Correo electrónico"
 
 #: ckan/templates/user/edit_user_form.html:22
 msgid "OpenID:"
-msgstr ""
+msgstr "OpenID:"
 
 #: ckan/templates/user/edit_user_form.html:25
 msgid "About:"
@@ -2363,11 +2369,11 @@ msgstr "Contraseña (repite):"
 
 #: ckan/templates/user/edit_user_form.html:49
 msgid "Change your username"
-msgstr ""
+msgstr "Cambie su nombre de usuario"
 
 #: ckan/templates/user/edit_user_form.html:51
 msgid "Username:"
-msgstr ""
+msgstr "Nombre de Usuario:"
 
 #: ckan/templates/user/layout.html:11
 msgid "My Profile"
@@ -2383,11 +2389,11 @@ msgstr "Salir"
 
 #: ckan/templates/user/layout.html:19
 msgid "View Profile"
-msgstr ""
+msgstr "Ver Perfil"
 
 #: ckan/templates/user/layout.html:25
 msgid "Register Account"
-msgstr ""
+msgstr "Registre una cuenta"
 
 #: ckan/templates/user/list.html:8
 msgid "user-list"
@@ -2457,7 +2463,7 @@ msgstr "Salir - Usuario"
 
 #: ckan/templates/user/logout.html:8
 msgid "Logout from"
-msgstr ""
+msgstr "Salir de"
 
 #: ckan/templates/user/logout.html:11
 msgid "You have logged out successfully."
@@ -2469,7 +2475,7 @@ msgstr "Registro - Usuario"
 
 #: ckan/templates/user/new.html:6
 msgid "Register for a new Account"
-msgstr ""
+msgstr "Regístres para una cuenta nueva"
 
 #: ckan/templates/user/new_user_form.html:18
 msgid "3+ chars, using only 'a-z0-9' and '-_'"
@@ -2481,7 +2487,7 @@ msgstr "Nombre completo (opcional):"
 
 #: ckan/templates/user/new_user_form.html:25
 msgid "E-Mail"
-msgstr ""
+msgstr "E-Mail"
 
 #: ckan/templates/user/read.html:5
 msgid "- User"
