--- a/no/LC_MESSAGES/ckan.po
+++ b/no/LC_MESSAGES/ckan.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: CKAN (Comprehensive Knowledge Archive Network)\n"
 "Report-Msgid-Bugs-To: http://www.ckan.org/\n"
 "POT-Creation-Date: 2011-11-16 18:02+0000\n"
-"PO-Revision-Date: 2011-11-16 18:03+0000\n"
-"Last-Translator: dread <internet@davidread.org>\n"
+"PO-Revision-Date: 2011-11-29 08:51+0000\n"
+"Last-Translator: oovrebo <olav.ovrebo@gmail.com>\n"
 "Language-Team: Norwegian (http://www.transifex.net/projects/p/ckan/team/no/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -153,7 +153,7 @@ msgstr "Request params must be in form of a json encoded dictionary."
 #: ckan/controllers/api.py:578
 #, python-format
 msgid "Bad slug type: %s"
-msgstr ""
+msgstr "Bad slug type: %s"
 
 #: ckan/controllers/authorization_group.py:44
 #, python-format
@@ -190,7 +190,7 @@ msgstr "Ikke autorisert til å lese gruppen %s"
 
 #: ckan/controllers/group.py:86
 msgid "Cannot render description"
-msgstr ""
+msgstr "Kan ikke gi beskrivelse"
 
 #: ckan/controllers/group.py:161 ckan/controllers/group_formalchemy.py:93
 #: ckan/controllers/package.py:374 ckan/controllers/package_formalchemy.py:93
@@ -343,7 +343,7 @@ msgstr "Bruker %s ikke autorisert til å redigere %s"
 
 #: ckan/controllers/user.py:225
 msgid "Profile updated"
-msgstr ""
+msgstr "Profil oppdatert"
 
 #: ckan/controllers/user.py:259
 #, python-format
@@ -807,15 +807,17 @@ msgid ""
 "Url must be purely lowercase alphanumeric (ascii) characters and these "
 "symbols: -_"
 msgstr ""
+"URL kan bare gjengis med små alfanumeriske (ascii) tegn og disse symbolene: "
+"-_"
 
 #: ckan/logic/validators.py:114
 msgid "That URL is already in use."
-msgstr ""
+msgstr "Denne URL er allerede i bruk."
 
 #: ckan/logic/validators.py:154
 #, python-format
 msgid "Tag \"%s\" length is more than maximum %i"
-msgstr ""
+msgstr "Lengden til stikkordet \"%s\" er mer enn maksimalt %i"
 
 #: ckan/logic/validators.py:221
 msgid "That login name is not available."
@@ -917,7 +919,7 @@ msgstr "REST API: Oppdater pakkerelasjon: %s %s %s"
 
 #: ckan/logic/action/update.py:378
 msgid "TaskStatus was not found."
-msgstr ""
+msgstr "TaskStatus ble ikke funnet."
 
 #: ckan/logic/auth/create.py:13
 #, python-format
@@ -979,7 +981,7 @@ msgstr "Bruker %s ikke autorisert til å slette gruppen %s"
 #: ckan/logic/auth/delete.py:55
 #, python-format
 msgid "User %s not authorized to delete task_status"
-msgstr ""
+msgstr "Bruker %s ikke autorisert til å slette task_status"
 
 #: ckan/logic/auth/get.py:78
 #, python-format
@@ -998,7 +1000,7 @@ msgstr "Ingen datakilde funnet for denne ressursen, kan ikke sjekke aut."
 #: ckan/logic/auth/get.py:111
 #, python-format
 msgid "User %s not authorized to read resource %s"
-msgstr ""
+msgstr "Bruker %s ikke autorisert til å lese ressurs %s"
 
 #: ckan/logic/auth/get.py:126
 #, python-format
@@ -1013,7 +1015,7 @@ msgstr "Bruker %s ikke autorisert til å redigere datakilden %s"
 #: ckan/logic/auth/update.py:44
 #, python-format
 msgid "User %s not authorized to read edit %s"
-msgstr ""
+msgstr "Bruker %s ikke autorisert til å lese redigeringen %s"
 
 #: ckan/logic/auth/update.py:58
 #, python-format
@@ -1061,7 +1063,7 @@ msgstr "Bruker %s ikke autorisert til å endre status for revisjonen"
 #: ckan/logic/auth/update.py:155
 #, python-format
 msgid "User %s not authorized to update task_status table"
-msgstr ""
+msgstr "Bruker %s ikke autorisert til å oppdatere tabellen task_status"
 
 #: ckan/logic/auth/update.py:165
 msgid "Valid API key needed to edit a package"
@@ -1222,15 +1224,15 @@ msgstr "Hei, verden!"
 
 #: ckan/templates/js_strings.html:18
 msgid "Checking..."
-msgstr ""
+msgstr "Kontrollerer..."
 
 #: ckan/templates/js_strings.html:19
 msgid "This URL is available!"
-msgstr ""
+msgstr "Denne URL er tilgjengelig!"
 
 #: ckan/templates/js_strings.html:20
 msgid "This URL is already used, please use a different one."
-msgstr ""
+msgstr "Denne webadressen er allerede i bruk, vennligst velg en annen."
 
 #: ckan/templates/js_strings.html:22
 msgid "Failed to save, possibly due to invalid data "
@@ -1242,7 +1244,7 @@ msgstr "Legg til datasett"
 
 #: ckan/templates/js_strings.html:24
 msgid "Add Group"
-msgstr ""
+msgstr "Legg til gruppe"
 
 #: ckan/templates/js_strings.html:25
 msgid ""
@@ -1258,11 +1260,11 @@ msgstr "Laster..."
 
 #: ckan/templates/js_strings.html:27
 msgid "(no name)"
-msgstr ""
+msgstr "(intet navn)"
 
 #: ckan/templates/js_strings.html:28
 msgid "Delete the resource '%name%'?"
-msgstr ""
+msgstr "Slette ressursen '%name%'?"
 
 #: ckan/templates/js_strings.html:33
 msgid "File URL"
@@ -1329,7 +1331,7 @@ msgstr "ID"
 
 #: ckan/templates/js_strings.html:49
 msgid "Done"
-msgstr ""
+msgstr "Ferdig"
 
 #: ckan/templates/js_strings.html:50
 msgid "This resource has unsaved changes."
@@ -1337,23 +1339,23 @@ msgstr "Denne ressursen har ulagrede endringer."
 
 #: ckan/templates/layout_base.html:51
 msgid "First time at"
-msgstr "Første gang"
+msgstr "Første gang på"
 
 #: ckan/templates/layout_base.html:51
 msgid "? Visit our"
-msgstr ""
+msgstr "? Besøk vår"
 
 #: ckan/templates/layout_base.html:51
 msgid "About page"
-msgstr ""
+msgstr "om-side"
 
 #: ckan/templates/layout_base.html:51
 msgid "to find out more."
-msgstr ""
+msgstr "for å finne ut mer."
 
 #: ckan/templates/layout_base.html:52
 msgid "x"
-msgstr ""
+msgstr "x"
 
 #: ckan/templates/layout_base.html:59
 msgid "My account"
@@ -1426,7 +1428,7 @@ msgstr "Brukere:"
 #: ckan/templates/layout_base.html:160 ckan/templates/group/history.html:9
 #: ckan/templates/package/history.html:24
 msgid "Revisions"
-msgstr "Revisjoner"
+msgstr "Siste endringer"
 
 #: ckan/templates/layout_base.html:165
 #: ckan/templates/authorization_group/index.html:6
@@ -1694,7 +1696,7 @@ msgstr "Grupper av datasett"
 
 #: ckan/templates/group/index.html:11
 msgid "What Are Groups?"
-msgstr ""
+msgstr "Hva er grupper?"
 
 #: ckan/templates/group/index.html:12
 msgid ""
@@ -1714,15 +1716,15 @@ msgstr "Historikk"
 
 #: ckan/templates/group/layout.html:26
 msgid "List Groups"
-msgstr ""
+msgstr "List opp grupper"
 
 #: ckan/templates/group/layout.html:29
 msgid "Add a Group"
-msgstr ""
+msgstr "Legg til en gruppe"
 
 #: ckan/templates/group/new.html:5 ckan/templates/group/new.html:6
 msgid "Add A Group"
-msgstr ""
+msgstr "Legg til en gruppe"
 
 #: ckan/templates/group/new_group_form.html:8
 #: ckan/templates/package/form.html:7
@@ -1743,7 +1745,7 @@ msgstr "Skjemaet inneholder ugyldig informasjon:"
 #: ckan/templates/group/new_group_form.html:22
 #: ckan/templates/package/new_package_form.html:44
 msgid "(edit)"
-msgstr ""
+msgstr "(rediger)"
 
 #: ckan/templates/group/new_group_form.html:26
 msgid "2+ chars, lowercase, using only 'a-z0-9' and '-_'"
@@ -1758,7 +1760,7 @@ msgstr "Forhåndsvisning"
 #: ckan/templates/group/new_group_form.html:35
 #: ckan/templates/package/new_package_form.html:73
 msgid "Start with a summary sentence ..."
-msgstr "Start med en oppsummering setning ..."
+msgstr "Begynn med en oppsummerende setning ..."
 
 #: ckan/templates/group/new_group_form.html:37
 #: ckan/templates/package/new_package_form.html:75
@@ -1832,7 +1834,7 @@ msgid ""
 msgstr ""
 "CKAN er Comprehensive Knowledge Archive Network, et [1:register] over "
 "datasett og prosjekter der mange av dem oppfyller kriteriene for [2:åpen "
-"kunnskap]"
+"kunnskap]."
 
 #: ckan/templates/home/about.html:15
 msgid ""
@@ -1858,12 +1860,10 @@ msgid ""
 "\t\ta dataset index and a wiki. As a registry it acts like [1:freshmeat] but for open data and\n"
 "\t\tcontent resources. However it adds to a simple registry in key ways."
 msgstr ""
-"Som diagrammet viser, kombinerer CKAN funksjonene i en liste / register, "
-"<span class=\"whitespace other\" title=\"Tab\">»»</span> en datasettindeks "
-"og en wiki. Som register fungerer det som [1: freshmeat], men tar for seg "
-"åpne data og <span class=\"whitespace other\" title=\"Tab\">»»</span> "
-"innholdsressurser. I forhold til et vanlig register har CKAN avgjørende "
-"fordeler."
+"Som diagrammet viser, kombinerer CKAN funksjonene i en liste/register, en "
+"datasettindeks og en wiki. Som register fungerer det som [1: freshmeat], men"
+" tar for seg åpne data og innholdsressurser. I forhold til et vanlig "
+"register har CKAN avgjørende fordeler."
 
 #: ckan/templates/home/about.html:29
 msgid ""
@@ -1969,7 +1969,7 @@ msgstr "Open Data Manual"
 
 #: ckan/templates/home/index.html:53
 msgid "Who else is here?"
-msgstr "Hvem andre er her?"
+msgstr "Datakilder - eksempler:"
 
 #: ckan/templates/home/index.html:61
 msgid "has"
@@ -1994,11 +1994,11 @@ msgstr "Grunnleggende informasjon"
 
 #: ckan/templates/package/edit.html:22
 msgid "Futher Information"
-msgstr ""
+msgstr "Utdypende informasjon"
 
 #: ckan/templates/package/edit.html:24
 msgid "Groups & Tags"
-msgstr ""
+msgstr "Grupper & stikkord"
 
 #: ckan/templates/package/edit_form.html:13
 #: ckan/templates/package/new_package_form.html:203
@@ -2157,7 +2157,7 @@ msgid ""
 "Either because it is not openly licensed or is missing\n"
 "      downloadable resources."
 msgstr ""
-"Enten fordi den ikke har åpen lisens eller fordi den mangler nedlastbare "
+"Enten fordi det ikke har åpen lisens eller fordi det mangler nedlastbare "
 "ressurser."
 
 #: ckan/templates/package/read.html:114
@@ -2389,7 +2389,7 @@ msgstr "E-post:"
 
 #: ckan/templates/user/edit_user_form.html:22
 msgid "OpenID:"
-msgstr ""
+msgstr "OpenID:"
 
 #: ckan/templates/user/edit_user_form.html:25
 msgid "About:"
@@ -2417,11 +2417,11 @@ msgstr "Passord (gjenta):"
 
 #: ckan/templates/user/edit_user_form.html:49
 msgid "Change your username"
-msgstr ""
+msgstr "Endre ditt brukernavn"
 
 #: ckan/templates/user/edit_user_form.html:51
 msgid "Username:"
-msgstr ""
+msgstr "Brukernavn:"
 
 #: ckan/templates/user/layout.html:11
 msgid "My Profile"
@@ -2437,11 +2437,11 @@ msgstr "Logg ut"
 
 #: ckan/templates/user/layout.html:19
 msgid "View Profile"
-msgstr ""
+msgstr "Vis profil"
 
 #: ckan/templates/user/layout.html:25
 msgid "Register Account"
-msgstr ""
+msgstr "Registrer konto"
 
 #: ckan/templates/user/list.html:8
 msgid "user-list"
@@ -2515,7 +2515,7 @@ msgstr "Logg ut - bruker"
 
 #: ckan/templates/user/logout.html:8
 msgid "Logout from"
-msgstr ""
+msgstr "Logg ut av"
 
 #: ckan/templates/user/logout.html:11
 msgid "You have logged out successfully."
@@ -2527,7 +2527,7 @@ msgstr "Registrer - bruker"
 
 #: ckan/templates/user/new.html:6
 msgid "Register for a new Account"
-msgstr ""
+msgstr "Registrer en ny konto"
 
 #: ckan/templates/user/new_user_form.html:18
 msgid "3+ chars, using only 'a-z0-9' and '-_'"
@@ -2539,7 +2539,7 @@ msgstr "Fullt navn (valgfritt):"
 
 #: ckan/templates/user/new_user_form.html:25
 msgid "E-Mail"
-msgstr ""
+msgstr "E-post"
 
 #: ckan/templates/user/read.html:5
 msgid "- User"
