--- a/pt_BR/LC_MESSAGES/ckan.po
+++ b/pt_BR/LC_MESSAGES/ckan.po
@@ -12,7 +12,7 @@ msgstr ""
 "POT-Creation-Date: 2011-11-16 18:02+0000\n"
 "PO-Revision-Date: 2011-11-24 21:42+0000\n"
 "Last-Translator: Augusto Herrmann <augusto.herrmann@gmail.com>\n"
-"Language-Team: Portuguese (Brazilian) (http://www.transifex.net/projects/p/ckan/team/pt_BR/)\n"
+"Language-Team: Portuguese (Brazil) (http://www.transifex.net/projects/p/ckan/team/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
